--- a/Domolend/index.html
+++ b/Domolend/index.html
@@ -59,6 +59,9 @@
                         </div>
                         <span class="callback">ОБРАТНЫЙ ЗВОНОК</span>
                     </div>
+                    <div class="burger">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </div>
                     <div class="callBack1">
                         <i class="fa fa-phone" aria-hidden="true"></i>
                     </div>
@@ -173,56 +176,70 @@
                 <div class="menu width1000">
                     <ul>
                         <li><img src="img/ball.png" alt="Нитки" title="Нитки"/><span>Текстиль</span>
-                            <ul class="subMenu">
-                                <li>Посуда 1</li>
-                                <li>Посуда 2</li>
-                                <li>Посуда 3</li>
-                                <li>Посуда 4</li>
-                                <li>Посуда 5</li>
-                                <li>Посуда 6</li>
-                                <li>Посуда 7</li>
-                                <li>Посуда 8</li>
-                                <li>Посуда 9</li>
-                            </ul>
+                            <div class="subMenu">
+                                <ul >
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                </ul>
+                                <div><img src="img/lamp.jpg" alt=""></div>
+                            </div>
+
+
                         </li>
                         <li><img src="img/cup.png" alt="Чашка" title="Чашка"/><span>Посуда</span>
-                            <ul class="subMenu">
-                                <li>Посуда 1</li>
-                                <li>Посуда 2</li>
-                                <li>Посуда 3</li>
-                                <li>Посуда 4</li>
-                                <li>Посуда 5</li>
-                                <li>Посуда 6</li>
-                                <li>Посуда 7</li>
-                                <li>Посуда 8</li>
-                                <li>Посуда 9</li>
-                            </ul>
+                            <div class="subMenu">
+                                <ul >
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                </ul>
+                                <div><img src="img/lamp.jpg" alt=""></div>
+                            </div>
                         </li>
                         <li><img src="img/train.png" alt="поезд" title="поезд"/><span>Детские товары</span>
-                            <ul class="subMenu">
-                                <li>Посуда 1</li>
-                                <li>Посуда 2</li>
-                                <li>Посуда 3</li>
-                                <li>Посуда 4</li>
-                                <li>Посуда 5</li>
-                                <li>Посуда 6</li>
-                                <li>Посуда 7</li>
-                                <li>Посуда 8</li>
-                                <li>Посуда 9</li>
-                            </ul>
+                            <div class="subMenu">
+                                <ul >
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                </ul>
+                                <div><img src="img/lamp.jpg" alt=""></div>
+                            </div>
                         </li>
                         <li><img src="img/sale.png" alt="разпродажа" title="разпродажа"/><span>Скидки и акции</span>
-                            <ul class="subMenu">
-                                <li>Посуда 1</li>
-                                <li>Посуда 2</li>
-                                <li>Посуда 3</li>
-                                <li>Посуда 4</li>
-                                <li>Посуда 5</li>
-                                <li>Посуда 6</li>
-                                <li>Посуда 7</li>
-                                <li>Посуда 8</li>
-                                <li>Посуда 9</li>
-                            </ul>
+                            <div class="subMenu">
+                                <ul >
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                    <li><a href="catalogue.html ">Посуда</a></li>
+                                </ul>
+                                <div><img src="img/lamp.jpg" alt=""></div>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -264,9 +281,9 @@
             <a class="New">Новинки</a>
         </div>
         <div class="floatRight Tov2">
-            <div><a href="">Все хиты</a></div>
-            <div><a href="">Все распродажи</a></div>
-            <div><a href="">Все новинки</a></div>
+            <div><a href="catalogue.html">Все хиты</a></div>
+            <div><a href="catalogue.html">Все распродажи</a></div>
+            <div><a href="catalogue.html">Все новинки</a></div>
         </div>
         <div class="clearAll"></div>
     </div>
