--- a/Domolend/compare.html
+++ b/Domolend/compare.html
@@ -19,7 +19,7 @@
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
         <ul class="corpMenu">
-          <li><a href="corp_menu.html">О компании</a></li>
+          <li><a href="corp_menu.htmlcorp_menu.html">О компании</a></li>
           <li><a href="corp_menu.html">Доставка и оплата</a></li>
           <li><a href="corp_menu.html">Программа лояльности</a></li>
           <li><a href="corp_menu.html">Гарантия</a></li>
@@ -38,7 +38,6 @@
         <div class="width1000">
           <div class="logo floatLeft"><a href="index.html"><img src="img/logo.png" alt="логотип" title="логотип"/></a>
           </div>
-
           <div class="floatLeft search-form">
             <form action="">
               <input type="text" placeholder="Поиск"/>
@@ -59,9 +58,6 @@
             </div>
             <span class="callback">ОБРАТНЫЙ ЗВОНОК</span>
           </div>
-          <div class="burger">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-          </div>
           <div class="callBack1">
             <i class="fa fa-phone" aria-hidden="true"></i>
           </div>
@@ -77,6 +73,10 @@
               <p class="hide"><input type="submit" class="butt3" value="Заказать Звонок"></p>
 
             </form>
+          </div>
+
+          <div class="burger">
+            <i class="fa fa-bars" aria-hidden="true"></i>
           </div>
           <div class="multibucket floatRight">
             <div class="likeWatch">
@@ -176,8 +176,9 @@
         <div class="menu width1000">
           <ul>
             <li><img src="img/ball.png" alt="Нитки" title="Нитки"/><span>Текстиль</span>
+
               <div class="subMenu">
-                <ul >
+                <ul>
                   <li><a href="catalogue.html ">Посуда</a></li>
                   <li><a href="catalogue.html ">Посуда</a></li>
                   <li><a href="catalogue.html ">Посуда</a></li>
@@ -194,8 +195,9 @@
 
             </li>
             <li><img src="img/cup.png" alt="Чашка" title="Чашка"/><span>Посуда</span>
+
               <div class="subMenu">
-                <ul >
+                <ul>
                   <li><a href="catalogue.html ">Посуда</a></li>
                   <li><a href="catalogue.html ">Посуда</a></li>
                   <li><a href="catalogue.html ">Посуда</a></li>
@@ -210,8 +212,9 @@
               </div>
             </li>
             <li><img src="img/train.png" alt="поезд" title="поезд"/><span>Детские товары</span>
+
               <div class="subMenu">
-                <ul >
+                <ul>
                   <li><a href="catalogue.html ">Посуда</a></li>
                   <li><a href="catalogue.html ">Посуда</a></li>
                   <li><a href="catalogue.html ">Посуда</a></li>
@@ -226,8 +229,9 @@
               </div>
             </li>
             <li><img src="img/sale.png" alt="разпродажа" title="разпродажа"/><span>Скидки и акции</span>
+
               <div class="subMenu">
-                <ul >
+                <ul>
                   <li><a href="catalogue.html ">Посуда</a></li>
                   <li><a href="catalogue.html ">Посуда</a></li>
                   <li><a href="catalogue.html ">Посуда</a></li>
@@ -247,41 +251,200 @@
     </div>
   </div>
 </header>
-
 <div class="width1000 breadcrumbs">
-  <h3>Название Новости</h3>
+  <h3>СРАВНЕНИЕ ТОВАРОВ</h3>
 
   <div class="breads">
-    <a href="index.html">На главную</a> / <a href="News.html">Новости</a> / <span>Название Новости</span>
+    <a href="index.html">На главную</a>/ Сравнение товаров
   </div>
 </div>
+<div class="width1000 ogrClass">
+  <table class="table_type_2 responsive_table type_2 full_width r_corners wraper shadow t_align_l m_bottom_30">
+    <tbody>
+    <tr>
+      <th class="">Название и категория товара</th>
+      <td data-title="Product Image,Name &amp; Category">
 
-<div class="width1000">
-  <img src="img/currentNews.jpg" alt="новости"/>
+        <a href="currentProduct.html"><img style="max-height:80px; display: block;" src="img/dog.jpg" alt="Собака"
+                                           title="собака"></a>
+        <a class="fw_medium d_inline_b f_size_ex_large color_dark m_bottom_5" href="currentProduct.html">Заголовок /
+          МАРКИРОВКА</a>
 
-  <div class="contentCurrentNews">
-    <span>Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-    dolore
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-    laborum.
-    <br/> <br/>
-    <span>Sed ut perspiciatis unde omnis</span> iste natus error sit voluptatem accusantium doloremque laudantium, totam
-    rem
-    aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
-    enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-    qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-    consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
-    quaerat voluptatem.
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-    laborum.
+      </td>
+      <td data-title="Product Image,Name &amp; Category">
 
-  </div>
+        <a href="currentProduct.html"><img style="max-height:80px; display: block;" src="img/dog.jpg" alt="Собака"
+                                           title="собака"></a>
+        <a class="fw_medium d_inline_b f_size_ex_large color_dark m_bottom_5" href="currentProduct.html">Заголовок /
+          МАРКИРОВКА</a>
 
+      </td>
+      <td data-title="Product Image,Name &amp; Category">
+
+        <a href="currentProduct.html"><img style="max-height:80px; display: block;" src="img/dog.jpg" alt="Собака"
+                                           title="собака"></a>
+        <a class="fw_medium d_inline_b f_size_ex_large color_dark m_bottom_5" href="currentProduct.html">Заголовок /
+          МАРКИРОВКА</a>
+
+      </td>
+    </tr>
+
+
+    <tr>
+      <!--rating-->
+      <td class="f_size_large d_xs_none">Рейтинг</td>
+      <td data-title="Rating"><span class="d_inline_middle default_t_color f_size_medium m_left_5"><span
+          id="bx_vo_10_9326_sBq3II_rating" class="bx_stars_rating_votes "><i class="fa fa-star"
+                                                                             aria-hidden="true"></i><i
+          class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star"
+                                                                                                    aria-hidden="true"></i><i
+          class="fa fa-star" aria-hidden="true"></i></span></span>
+       <!-- <table style="margin: 0;float: left; " align="center" class="bx_item_detail_rating">
+          <tbody>
+          <tr>
+            <td style="margin: 0;padding: 0;border: none;">
+              <div class="bx_item_rating">
+                <div class="bx_stars_container">
+                  <div id="bx_vo_10_9326_sBq3II_stars" class="bx_stars_bg"></div>
+                  <div id="bx_vo_10_9326_sBq3II_progr" class="bx_stars_progres" style="width: 80%;"></div>
+                </div>
+              </div>
+            </td>
+
+          </tr>
+          </tbody>
+        </table>-->
+      </td>
+      <td data-title="Rating"><span class="d_inline_middle default_t_color f_size_medium m_left_5"><span
+          id="bx_vo_10_9325_NLJNn1_rating" class="bx_stars_rating_votes "><i class="fa fa-star"
+                                                                             aria-hidden="true"></i><i
+          class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star"
+                                                                                                    aria-hidden="true"></i><i
+          class="fa fa-star" aria-hidden="true"></i></span></span>
+        <!--<table style="margin: 0;float: left; " align="center" class="bx_item_detail_rating">
+          <tbody>
+          <tr>
+            <td style="margin: 0;padding: 0;border: none;">
+              <div class="bx_item_rating">
+                <div class="bx_stars_container">
+                  <div id="bx_vo_10_9325_NLJNn1_stars" class="bx_stars_bg"></div>
+                  <div id="bx_vo_10_9325_NLJNn1_progr" class="bx_stars_progres" style="width: 0%;"></div>
+                </div>
+              </div>
+            </td>
+
+          </tr>
+          </tbody>
+        </table>-->
+      </td>
+      <td data-title="Rating"><span class="d_inline_middle default_t_color f_size_medium m_left_5"><span
+          id="bx_vo_10_8032_ZzF7UW_rating" class="bx_stars_rating_votes "><i class="fa fa-star"
+                                                                             aria-hidden="true"></i><i
+          class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star"
+                                                                                                    aria-hidden="true"></i><i
+          class="fa fa-star" aria-hidden="true"></i></span></span>
+        <!--<table style="margin: 0;float: left; " align="center" class="bx_item_detail_rating">
+          <tbody>
+          <tr>
+            <td style="margin: 0;padding: 0;border: none;">
+              <div class="bx_item_rating">
+                <div class="bx_stars_container">
+                  <div id="bx_vo_10_8032_ZzF7UW_stars" class="bx_stars_bg"></div>
+                  <div id="bx_vo_10_8032_ZzF7UW_progr" class="bx_stars_progres" style="width: 80%;"></div>
+                </div>
+              </div>
+            </td>
+
+          </tr>
+          </tbody>
+        </table>-->
+      </td>
+    </tr>
+    <tr>
+      <td class="f_size_large d_xs_none">Цена</td>
+      <td data-title="Price">
+
+        <span class="fw_medium f_size_large scheme_color new_bold_price">400 грн.</span></td>
+      <td data-title="Price">
+
+        <span class="fw_medium f_size_large scheme_color new_bold_price">400 грн.</span></td>
+      <td data-title="Price">
+
+        <span class="fw_medium f_size_large scheme_color new_bold_price">400 грн.</span></td>
+    </tr>
+    <tr>
+      <!--description-->
+      <td class="f_size_large d_xs_none">Наличие</td>
+      <td data-title="Availability">
+        <p>На складе: <span class="color_green">96</span> шт.</p></td>
+      <td data-title="Availability">
+        <p>На складе: <span class="color_green">109</span> шт.</p></td>
+      <td data-title="Availability">
+        <p>На складе: <span class="color_green">13</span> шт.</p></td>
+    </tr>
+
+    <tr>
+      <td>Свойство</td>
+      <td>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      </td>
+      <td>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      </td>
+      <td>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      </td>
+    </tr>
+    <tr>
+      <!--action-->
+      <td class="f_size_large d_xs_none">Действие</td>
+      <td data-title="Action">
+        <a style="display: inline-block;"
+           class="butt3"
+           href="currentProduct.html" rel="nofollow"><i class="fa fa-shopping-cart"
+                                                        aria-hidden="true"></i><span>  Купить</span></a>
+        <br>
+       <div class="OGR">
+         <a href="wishList.html"><i class="fa fa-heart-o m_right_5 f_size_large"></i></a>
+         <a class="compare_del8032"><i class="fa fa-times m_right_5"></i></a>
+       </div>
+      </td>
+      <td data-title="Action">
+        <a style="display: inline-block;"
+           class="butt3"
+           href="currentProduct.html" rel="nofollow"><i class="fa fa-shopping-cart"
+                                                        aria-hidden="true"></i><span>  Купить</span></a>
+        <br>
+        <div class="OGR">
+          <a href="wishList.html"><i class="fa fa-heart-o m_right_5 f_size_large"></i></a>
+          <a class="compare_del8032"><i class="fa fa-times m_right_5"></i></a>
+        </div>
+      </td>
+      <td data-title="Action">
+        <a style="display: inline-block;"
+           class="butt3"
+           href="currentProduct.html" rel="nofollow"><i class="fa fa-shopping-cart"
+                                                        aria-hidden="true"></i><span>  Купить</span></a>
+        <br>
+        <div class="OGR">
+          <a href="wishList.html"><i class="fa fa-heart-o m_right_5 f_size_large"></i></a>
+          <a class="compare_del8032"><i class="fa fa-times m_right_5"></i></a>
+        </div>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+  <div class="clearAll"></div>
+
+</div>
+<div id="modal_form">
+  <span id="modal_close"><i class="fa fa-times" aria-hidden="true"></i></span>
+
+  <h3> Товар добавлен в корзину</h3>
+
+  <div><i class="fa fa-check-circle-o" aria-hidden="true"></i></div>
+  <a href="bucket.html" class="edit_order butt3" style="margin: 20px auto;">В корзину</a>
 </div>
 <div class="popPrivatRoom">
   <form>
@@ -319,7 +482,6 @@
   </form>
 </div>
 <div id="overlay"></div>
-<a class="lift"><i class="fa fa-arrow-circle-o-up" aria-hidden="true"></i></a>
 <footer>
   <div class="width1000">
     <div class="footer_top">
