--- a/Domolend/account.html
+++ b/Domolend/account.html
@@ -80,8 +80,8 @@
                     <div class="multibucket floatRight">
                         <div class="likeWatch">
                             <span>1</span>
-                            <i class="fa fa-heart-o" aria-hidden="true"></i>
-                            <i class="fa fa-eye" aria-hidden="true"></i>
+                            <i class="fa fa-heart-o" aria-hidden="true" onClick="window.location='wishList.html'"></i>
+                            <i class="fa fa-eye" aria-hidden="true" onClick="window.location='compare.html'"></i>
                         </div>
                         <div class="bucket" onClick="window.location='bucket.html'">
                             <a>1</a>
