--- a/Domolend/wishList.html
+++ b/Domolend/wishList.html
@@ -19,7 +19,7 @@
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
         <ul class="corpMenu">
-          <li><a href="corp_menu.html">О компании</a></li>
+          <li><a href="corp_menu.htmlcorp_menu.html">О компании</a></li>
           <li><a href="corp_menu.html">Доставка и оплата</a></li>
           <li><a href="corp_menu.html">Программа лояльности</a></li>
           <li><a href="corp_menu.html">Гарантия</a></li>
@@ -36,9 +36,7 @@
     <div class="fixedMenu">
       <div class="mMenu">
         <div class="width1000">
-          <div class="logo floatLeft"><a href="index.html"><img src="img/logo.png" alt="логотип" title="логотип"/></a>
-          </div>
-
+          <div class="logo floatLeft"><a href="index.html"><img src="img/logo.png" alt="логотип" title="логотип"/></a></div>
           <div class="floatLeft search-form">
             <form action="">
               <input type="text" placeholder="Поиск"/>
@@ -59,9 +57,6 @@
             </div>
             <span class="callback">ОБРАТНЫЙ ЗВОНОК</span>
           </div>
-          <div class="burger">
-            <i class="fa fa-bars" aria-hidden="true"></i>
-          </div>
           <div class="callBack1">
             <i class="fa fa-phone" aria-hidden="true"></i>
           </div>
@@ -77,6 +72,10 @@
               <p class="hide"><input type="submit" class="butt3" value="Заказать Звонок"></p>
 
             </form>
+          </div>
+
+          <div class="burger">
+            <i class="fa fa-bars" aria-hidden="true"></i>
           </div>
           <div class="multibucket floatRight">
             <div class="likeWatch">
@@ -247,41 +246,130 @@
     </div>
   </div>
 </header>
-
 <div class="width1000 breadcrumbs">
-  <h3>Название Новости</h3>
+  <h3>СПИСОК ЖЕДАНИЙ</h3>
 
   <div class="breads">
-    <a href="index.html">На главную</a> / <a href="News.html">Новости</a> / <span>Название Новости</span>
+    <a href="index.html">На главную</a>/ Список желаний
   </div>
 </div>
+<div class="width1000 personal">
 
-<div class="width1000">
-  <img src="img/currentNews.jpg" alt="новости"/>
+  <table class="backet">
+    <thead>
+    <th>&#160;</th>
+    <th>ПРОДУКТ</th>
+    <th>ЦЕНА</th>
+    <th>КОЛИЧЕСТВО</th>
+    <th>СУММА</th>
+    </thead>
+    <tbody>
+    <tr>
+      <td><img src="img/chair.jpg" alt="стул"/></td>
+      <td>
+        <span>ЗАГОЛОВОК/МАРКИРОВКА</span>
+        Краткое описание
+      </td>
+      <td>400грн.</td>
+      <td>
+        <div class="centered">
+          <table cellspacing="0" cellpadding="0" class="counter">
+            <tbody>
+            <tr>
+              <td>
+                <input type="text" size="3" id="QUANTITY_INPUT_22" name="QUANTITY_INPUT_22"
+                       maxlength="18" min="0" max="100" step="0" value="1">
+              </td>
+              <td id="basket_quantity_control">
+                <div class="basket_quantity_control">
+                  <a><i class="fa fa-caret-up" aria-hidden="true"></i></a>
+                  <a><i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                </div>
+              </td>
+              <td style="text-align: left">шт</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </td>
+      <td>
+        <a class="butt3 buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i>  <span>В корзину</span></a>
+      </td>
+    </tr>
+    <tr>
+      <td><img src="img/chair.jpg" alt="стул"/></td>
+      <td>
+        <span>ЗАГОЛОВОК/МАРКИРОВКА</span>
+        Краткое описание
+      </td>
+      <td>400грн.</td>
+      <td>
+        <div class="centered">
+          <table cellspacing="0" cellpadding="0" class="counter">
+            <tbody>
+            <tr>
+              <td>
+                <input type="text" size="3" id="QUANTITY_INPUT_22" name="QUANTITY_INPUT_22"
+                       maxlength="18" min="0" max="100" step="0" value="1">
+              </td>
+              <td id="basket_quantity_control">
+                <div class="basket_quantity_control">
+                  <a><i class="fa fa-caret-up" aria-hidden="true"></i></a>
+                  <a><i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                </div>
+              </td>
+              <td style="text-align: left">шт</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </td>
+      <td>
+        <a class="butt3 buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i>  <span>В корзину</span></a>
+      </td>
+    </tr>
+    <tr>
+      <td><img src="img/chair.jpg" alt="стул"/></td>
+      <td>
+        <span>ЗАГОЛОВОК/МАРКИРОВКА</span>
+        Краткое описание
+      </td>
+      <td>400грн.</td>
+      <td>
+        <div class="centered">
+          <table cellspacing="0" cellpadding="0" class="counter">
+            <tbody>
+            <tr>
+              <td>
+                <input type="text" size="3" id="QUANTITY_INPUT_22" name="QUANTITY_INPUT_22"
+                       maxlength="18" min="0" max="100" step="0" value="1">
+              </td>
+              <td id="basket_quantity_control">
+                <div class="basket_quantity_control">
+                  <a><i class="fa fa-caret-up" aria-hidden="true"></i></a>
+                  <a><i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                </div>
+              </td>
+              <td style="text-align: left">шт</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </td>
+      <td>
+        <a class="butt3 buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i>  <span>В корзину</span></a>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+  <div class="clearAll"></div>
 
-  <div class="contentCurrentNews">
-    <span>Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-    dolore
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-    laborum.
-    <br/> <br/>
-    <span>Sed ut perspiciatis unde omnis</span> iste natus error sit voluptatem accusantium doloremque laudantium, totam
-    rem
-    aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
-    enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-    qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-    consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
-    quaerat voluptatem.
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-    laborum.
-
-  </div>
-
+</div>
+<div id="modal_form">
+  <span id="modal_close"><i class="fa fa-times" aria-hidden="true"></i></span>
+  <h3> Товар добавлен в корзину</h3>
+  <div><i class="fa fa-check-circle-o" aria-hidden="true"></i></div>
+  <a href="bucket.html" class="edit_order butt3" style="margin: 20px auto;">В корзину</a>
 </div>
 <div class="popPrivatRoom">
   <form>
@@ -319,7 +407,6 @@
   </form>
 </div>
 <div id="overlay"></div>
-<a class="lift"><i class="fa fa-arrow-circle-o-up" aria-hidden="true"></i></a>
 <footer>
   <div class="width1000">
     <div class="footer_top">
