--- a/LPI/index.html
+++ b/LPI/index.html
@@ -103,8 +103,8 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
           et dolore magna.
         </p>
-      </div>
-    </div>
+      </div>    </div>
+
     <div class="width33">
       <div>
         <img src="img/gai.png" alt=""/>
@@ -154,6 +154,7 @@
   </div>
 </div>
 <div class="clearAll"></div>
+
 <footer>
   <div class="bg">
     <div class="width1100">
