--- a/LPI/index.html
+++ b/LPI/index.html
@@ -155,7 +155,7 @@
 </div>
 <div class="clearAll"></div>
 
-<footer>
+<footer class="footer">
   <div class="bg">
     <div class="width1100">
       <a href="#"><img src="img/logo.png" alt=""/>
