--- a/LPI/index.html
+++ b/LPI/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<header>
+<div class="header">
   <div class="topP">
     <div class="width1100 ">
       <i class="fa fa-phone-square" aria-hidden="true"></i>
@@ -36,7 +36,7 @@
       </ul>
     </div>
   </div>
-</header>
+</div>
 
 <div class="slider">
   <div>
@@ -155,7 +155,7 @@
 </div>
 <div class="clearAll"></div>
 
-<footer class="footer">
+<div class="footer">
   <div class="bg">
     <div class="width1100">
       <a href="#"><img src="img/logo.png" alt=""/>
@@ -183,7 +183,7 @@
     </div>
   </div>
   <div class="copy">Создание и разработка сайта &copy; Intellectus-studio 2016</div>
-</footer>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="js/js.js"></script>
 </body>
