--- a/Domolend/index.html
+++ b/Domolend/index.html
@@ -440,7 +440,7 @@
     </div>
 </div>
 
-<div class="newses">
+<div class="newsesMain">
     <h5>НОВОСТИ</h5>
 
     <div class="bg_news width1000">
