--- a/Domolend/compare.html
+++ b/Domolend/compare.html
@@ -15,11 +15,9 @@
   <div class="menuTop">
     <div class="borderBottom">
       <div class="width1000">
-        <div class="corpBurger">
-          <i class="fa fa-bars" aria-hidden="true"></i>
-        </div>
+
         <ul class="corpMenu">
-          <li><a href="corp_menu.htmlcorp_menu.html">О компании</a></li>
+          <li><a href="corp_menu.html">О компании</a></li>
           <li><a href="corp_menu.html">Доставка и оплата</a></li>
           <li><a href="corp_menu.html">Программа лояльности</a></li>
           <li><a href="corp_menu.html">Гарантия</a></li>
@@ -36,7 +34,10 @@
     <div class="fixedMenu">
       <div class="mMenu">
         <div class="width1000">
-          <div class="logo floatLeft"><a href="index.html"><img src="img/logo.png" alt="логотип" title="логотип"/></a>
+          <div class="logo floatLeft"><a href="index.html"><img src="img/logo_domolend.svg" alt="логотип"
+                                                                title="логотип"/></a></div>
+          <div class="callBack1">
+            <i class="fa fa-phone" aria-hidden="true"></i>
           </div>
           <div class="floatLeft search-form">
             <form action="">
@@ -51,32 +52,36 @@
             <div class="numberHide">
               все телефоны <i class="fa fa-chevron-down" aria-hidden="true"></i>
               <ul class="phones">
-                <li>(063)636-63-63</li>
-                <li>(098)900-90-90</li>
-                <li>(099)999-99-99</li>
+                <li><img src="img/lifecell.png" alt="лайф">(063)636-63-63</li>
+                <li><img src="img/kyivstar.png" alt="">(098)900-90-90</li>
+                <li><img src="img/vodafone.png" alt="">(099)999-99-99</li>
               </ul>
             </div>
             <span class="callback">ОБРАТНЫЙ ЗВОНОК</span>
           </div>
-          <div class="callBack1">
-            <i class="fa fa-phone" aria-hidden="true"></i>
+          <div class="burgers">
+            Меню
           </div>
-          <div class="callbackForm">
-            <form>
-              <p class="hide"><label for="textCallBack">Введите Ваше Имя</label><input type="text" required=""
-                                                                                       id="textCallBack">
-              </p>
-
-              <p><label for="emailCallBack">Введите Ваше E-mail</label><input type="email" required=""
-                                                                              id="emailCallBack"></p>
-
-              <p class="hide"><input type="submit" class="butt3" value="Заказать Звонок"></p>
-
-            </form>
+          <div class="corpBurger">
+            <i class="fa fa-bars" aria-hidden="true"></i>
           </div>
-
           <div class="burger">
             <i class="fa fa-bars" aria-hidden="true"></i>
+          </div>
+
+
+          <div class="callbackForm">
+            <form>
+              <p class="hide"><input type="text" required="" id="textCallBack" placeholder="Введите Ваше Имя">
+              </p>
+
+              <p><input type="email" required="" id="emailCallBack" placeholder="Введите Ваше E-mail"></p>
+
+              <p class="days">Пн-Пт, с 9.00 до 19.00 </p>
+
+              <p class="hide"><input type="submit" class="" value="Перезвоните мне"></p>
+
+            </form>
           </div>
           <div class="multibucket floatRight">
             <div class="likeWatch">
@@ -172,10 +177,11 @@
         </div>
         <div class="clearAll"></div>
       </div>
-      <div class="menu">
+      <div style="background: #ffcc33;">
         <div class="menu width1000">
-          <ul>
-            <li><img src="img/ball.png" alt="Нитки" title="Нитки"/><span>Текстиль</span>
+          <ul class="menuA menuToggle">
+            <li class="click"><img src="img/ball.png" alt="Нитки" title="Нитки"/><span>Текстиль</span>
+              <i class="fa fa-plus" aria-hidden="true"></i>
 
               <div class="subMenu">
                 <ul>
@@ -194,7 +200,8 @@
 
 
             </li>
-            <li><img src="img/cup.png" alt="Чашка" title="Чашка"/><span>Посуда</span>
+            <li class="click"><img src="img/cup.png" alt="Чашка" title="Чашка"/><span>Посуда</span>
+              <i class="fa fa-plus" aria-hidden="true"></i>
 
               <div class="subMenu">
                 <ul>
@@ -211,7 +218,8 @@
                 <div><img src="img/lamp.jpg" alt=""></div>
               </div>
             </li>
-            <li><img src="img/train.png" alt="поезд" title="поезд"/><span>Детские товары</span>
+            <li class="click"><img src="img/train.png" alt="поезд" title="поезд"/><span>Детские товары</span>
+              <i class="fa fa-plus" aria-hidden="true"></i>
 
               <div class="subMenu">
                 <ul>
@@ -228,7 +236,8 @@
                 <div><img src="img/lamp.jpg" alt=""></div>
               </div>
             </li>
-            <li><img src="img/sale.png" alt="разпродажа" title="разпродажа"/><span>Скидки и акции</span>
+            <li class="click"><img src="img/sale.png" alt="разпродажа" title="разпродажа"/><span>Скидки и акции</span>
+              <i class="fa fa-plus" aria-hidden="true"></i>
 
               <div class="subMenu">
                 <ul>
@@ -247,6 +256,17 @@
             </li>
           </ul>
         </div>
+      </div>
+      <div class="menu2">
+        <ul class="corpMenuA">
+          <li><a href="corp_menu.html">О компании</a></li>
+          <li><a href="corp_menu.html">Доставка и оплата</a></li>
+          <li><a href="corp_menu.html">Программа лояльности</a></li>
+          <li><a href="corp_menu.html">Гарантия</a></li>
+          <li><a href="corp_menu.html">Сотрудничество</a></li>
+          <li><a href="corp_menu.html">Оптовикам</a></li>
+          <li><a href="contact.html">Контакты</a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -299,21 +319,21 @@
           class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star"
                                                                                                     aria-hidden="true"></i><i
           class="fa fa-star" aria-hidden="true"></i></span></span>
-       <!-- <table style="margin: 0;float: left; " align="center" class="bx_item_detail_rating">
-          <tbody>
-          <tr>
-            <td style="margin: 0;padding: 0;border: none;">
-              <div class="bx_item_rating">
-                <div class="bx_stars_container">
-                  <div id="bx_vo_10_9326_sBq3II_stars" class="bx_stars_bg"></div>
-                  <div id="bx_vo_10_9326_sBq3II_progr" class="bx_stars_progres" style="width: 80%;"></div>
-                </div>
-              </div>
-            </td>
+        <!-- <table style="margin: 0;float: left; " align="center" class="bx_item_detail_rating">
+           <tbody>
+           <tr>
+             <td style="margin: 0;padding: 0;border: none;">
+               <div class="bx_item_rating">
+                 <div class="bx_stars_container">
+                   <div id="bx_vo_10_9326_sBq3II_stars" class="bx_stars_bg"></div>
+                   <div id="bx_vo_10_9326_sBq3II_progr" class="bx_stars_progres" style="width: 80%;"></div>
+                 </div>
+               </div>
+             </td>
 
-          </tr>
-          </tbody>
-        </table>-->
+           </tr>
+           </tbody>
+         </table>-->
       </td>
       <td data-title="Rating"><span class="d_inline_middle default_t_color f_size_medium m_left_5"><span
           id="bx_vo_10_9325_NLJNn1_rating" class="bx_stars_rating_votes "><i class="fa fa-star"
@@ -404,17 +424,7 @@
            href="currentProduct.html" rel="nofollow"><i class="fa fa-shopping-cart"
                                                         aria-hidden="true"></i><span>  Купить</span></a>
         <br>
-       <div class="OGR">
-         <a href="wishList.html"><i class="fa fa-heart-o m_right_5 f_size_large"></i></a>
-         <a class="compare_del8032"><i class="fa fa-times m_right_5"></i></a>
-       </div>
-      </td>
-      <td data-title="Action">
-        <a style="display: inline-block;"
-           class="butt3"
-           href="currentProduct.html" rel="nofollow"><i class="fa fa-shopping-cart"
-                                                        aria-hidden="true"></i><span>  Купить</span></a>
-        <br>
+
         <div class="OGR">
           <a href="wishList.html"><i class="fa fa-heart-o m_right_5 f_size_large"></i></a>
           <a class="compare_del8032"><i class="fa fa-times m_right_5"></i></a>
@@ -426,6 +436,19 @@
            href="currentProduct.html" rel="nofollow"><i class="fa fa-shopping-cart"
                                                         aria-hidden="true"></i><span>  Купить</span></a>
         <br>
+
+        <div class="OGR">
+          <a href="wishList.html"><i class="fa fa-heart-o m_right_5 f_size_large"></i></a>
+          <a class="compare_del8032"><i class="fa fa-times m_right_5"></i></a>
+        </div>
+      </td>
+      <td data-title="Action">
+        <a style="display: inline-block;"
+           class="butt3"
+           href="currentProduct.html" rel="nofollow"><i class="fa fa-shopping-cart"
+                                                        aria-hidden="true"></i><span>  Купить</span></a>
+        <br>
+
         <div class="OGR">
           <a href="wishList.html"><i class="fa fa-heart-o m_right_5 f_size_large"></i></a>
           <a class="compare_del8032"><i class="fa fa-times m_right_5"></i></a>
