--- a/Domolend/wishList.html
+++ b/Domolend/wishList.html
@@ -272,7 +272,7 @@
   </div>
 </header>
 <div class="width1000 breadcrumbs">
-  <h3>СПИСОК ЖЕДАНИЙ</h3>
+  <h3>СПИСОК ЖЕЛАНИЙ</h3>
 
   <div class="breads">
     <a href="index.html">На главную</a>/ Список желаний
